Fixed get function